Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header class="site-header">
       <div class="container header-inner">
         <a class="brand" href="#">
-          <span class="brand-mark" aria-hidden="true"><img src="./img/Screenshot 2026-01-01 145319.png" alt=""></span>
+          <span class="brand-mark" aria-hidden="true"><img src="./Screenshot 2026-01-01 145319.png" alt=""></span>
           <span class="brand-text">GitHub CLI</span>
         </a>
         <nav class="nav">
@@ -186,3 +186,4 @@
     </footer>
   </body>
 </html>
+
